[package]
name = "cortex-time"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "unmasked"

[[bin]]
name = "masked"

[dependencies]
fixsliced_gift = { git = "ssh://git@github.com/NVedsted/fixsliced-gift.git", rev = "fefda5d9" }
cortex-m = "0.7.4"
cortex-m-rt = { version = "0.7.1", features = ["device"] }
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
stm32f3xx-hal = { version = "0.9.0", features = ["ld", "rt", "stm32f303xc"] }
nb = "1.0.0"

[profile.release]
debug = true
lto = true
codegen-units = 1
